AC_PREREQ([2.67])

AC_INIT([jpegutil], [0.1])

LT_CURRENT=0
LT_REVISION=0
LT_AGE=0
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AC_CONFIG_SRCDIR([jpegutil/JpegDec.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([1.11 -Wall -Werror no-define foreign subdir-objects])

AC_PROG_MAKE_SET
AC_PROG_INSTALL

AC_PROG_CC
AC_PROG_CXX
AC_LANG([C++])

AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT